--- a/Notebooks/6_classifier_duplicateanalyser/duplicate_analyser.ipynb
+++ b/Notebooks/6_classifier_duplicateanalyser/duplicate_analyser.ipynb
@@ -41,10 +41,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# TODO: Handle class imbalance\n",
+    "\n",
     "import pandas as pd\n",
     "# Environment settings\n",
     "pd.set_option('display.max_columns', None) # to show all columns\n",
@@ -221,6 +223,138 @@
     "# Reading the data\n",
     "df=pd.read_excel('data.xlsx', engine='openpyxl')\n",
     "df.head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Name_Score</th>\n",
+       "      <th>Address_Score</th>\n",
+       "      <th>City_Score</th>\n",
+       "      <th>URL_Score</th>\n",
+       "      <th>Phone_Score</th>\n",
+       "      <th>Classification</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>98</td>\n",
+       "      <td>78</td>\n",
+       "      <td>93</td>\n",
+       "      <td>98</td>\n",
+       "      <td>91</td>\n",
+       "      <td>Duplicate</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>96</td>\n",
+       "      <td>76</td>\n",
+       "      <td>92</td>\n",
+       "      <td>86</td>\n",
+       "      <td>87</td>\n",
+       "      <td>Distinct</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>94</td>\n",
+       "      <td>90</td>\n",
+       "      <td>74</td>\n",
+       "      <td>90</td>\n",
+       "      <td>93</td>\n",
+       "      <td>Duplicate</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>94</td>\n",
+       "      <td>77</td>\n",
+       "      <td>67</td>\n",
+       "      <td>87</td>\n",
+       "      <td>88</td>\n",
+       "      <td>Distinct</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>93</td>\n",
+       "      <td>84</td>\n",
+       "      <td>97</td>\n",
+       "      <td>92</td>\n",
+       "      <td>93</td>\n",
+       "      <td>Duplicate</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Name_Score  Address_Score  City_Score  URL_Score  Phone_Score  \\\n",
+       "0          98             78          93         98           91   \n",
+       "1          96             76          92         86           87   \n",
+       "2          94             90          74         90           93   \n",
+       "3          94             77          67         87           88   \n",
+       "4          93             84          97         92           93   \n",
+       "\n",
+       "  Classification  \n",
+       "0      Duplicate  \n",
+       "1       Distinct  \n",
+       "2      Duplicate  \n",
+       "3       Distinct  \n",
+       "4      Duplicate  "
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Classification\n",
+       "Distinct     680\n",
+       "Duplicate    319\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.Classification.value_counts()"
    ]
   },
   {
@@ -1603,7 +1737,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.13"
+   "version": "3.12.5"
   }
  },
  "nbformat": 4,
