Updated sklearn pipeline code file

--- a/Notebooks/4_sklearn_pipeline/sklearn_pipeline.ipynb
+++ b/Notebooks/4_sklearn_pipeline/sklearn_pipeline.ipynb
@@ -11,100 +11,221 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "102f0acd-c098-45d2-b978-a6fb7a933b0c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Coding with sklearn pipeline\n",
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "from sklearn.impute import SimpleImputer\n",
-    "from sklearn.preprocessing import StandardScaler,OneHotEncoder\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.compose import ColumnTransformer\n",
-    "from sklearn.tree import DecisionTreeClassifier\n",
-    "\n",
-    "from sklearn.pipeline import Pipeline,make_pipeline\n",
-    "d2 = {'Genre':['Rock', 'Metal', 'Bluegrass', 'Rock', np.nan, 'Rock', 'Rock', np.nan, 'Bluegrass', 'Rock'],\n",
-    "      'Social_media_followers':[1000000, np.nan, 2000000, 1310000, 1700000, np.nan, 4100000, 1600000, 2200000, 1000000],\n",
-    "      'likes':[6000000, np.nan, 5000000, 1610000, 1800000, np.nan, 4800000, 1650000, 2680000, 5000000],\n",
-    "      'Sold_out':[1,0,0,1,0,0,0,1,0,1]}\n",
-    "df=pd.DataFrame(data=d2)\n",
-    "df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 2,
-   "id": "105123fe-0248-4ef6-a080-1fa6ad44f94f",
+   "id": "e49e1d85-0ab8-4c2a-8615-fd9b134ea093",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Score:0.6666666666666666\n"
+      "Model Accuracy: 1.00\n",
+      "Precision: 1.00\n",
+      "Recall: 1.00\n",
+      "Model saved as 'pipe.joblib'\n",
+      "Loaded model successfully.\n",
+      "Loaded pipeline verification score: 1.0\n"
      ]
     }
    ],
    "source": [
-    "#num_cols=['Social_media_followers']\n",
-    "#cat_cols=['Genre']\n",
-    "num_cols = df.select_dtypes(include=['float64']).columns.tolist()\n",
-    "cat_cols = df.select_dtypes(include=['object', 'category']).columns.tolist()\n",
+    "\"\"\"\n",
+    "This script addresses the problem of classifying music events into 'sold-out' or 'not sold-out' categories \n",
+    "based on various features such as genre, social media followers, and likes. The pipeline involves data \n",
+    "preprocessing, including handling missing values, scaling numerical features, and encoding categorical data.\n",
+    "A decision tree classifier is trained on the processed data, and the resulting model is saved for future use.\n",
+    "\"\"\"\n",
     "\n",
-    "X = df.iloc[:,0:3]\n",
-    "y = df.iloc[:,3]\n",
+    "# Import necessary libraries\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
     "\n",
-    "num_pipe = Pipeline(steps=[\n",
-    "                   ('impute', SimpleImputer(strategy='mean')),\n",
-    "                   ('scale', StandardScaler() )\n",
-    "                   ])\n",
-    "cat_pipe = Pipeline(steps=[\n",
-    "                   ('impute', SimpleImputer(strategy='most_frequent')),\n",
-    "                  ('ohe', OneHotEncoder(handle_unknown='ignore', sparse_output=False))\n",
-    "                   ])\n",
+    "from sklearn.impute import SimpleImputer\n",
+    "from sklearn.preprocessing import StandardScaler, OneHotEncoder\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.compose import ColumnTransformer\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.pipeline import Pipeline, make_pipeline\n",
+    "from sklearn.exceptions import NotFittedError\n",
+    "from sklearn.metrics import precision_score, recall_score\n",
     "\n",
-    "col_trans = ColumnTransformer(transformers=[\n",
-    "                            ('num', num_pipe, num_cols),\n",
-    "                            ('cat', cat_pipe, cat_cols)],\n",
-    "                            remainder='drop',\n",
-    "                            n_jobs=-1\n",
-    "                            )\n",
-    "\n",
-    "dt = DecisionTreeClassifier()\n",
-    "pipe = make_pipeline(col_trans, dt)\n",
-    "\n",
-    "X_train, X_test, y_train, y_test=train_test_split(X, y, test_size=0.3)\n",
-    "pipe.fit(X_train, y_train)\n",
-    "print(f'Score:{pipe.score(X_test, y_test)}')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "8e16f6b0-187a-4c09-8145-2352968de65e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "import joblib\n",
-    "joblib.dump(pipe,'pipe.joblib')\n",
-    "loaded_pipe = joblib.load('pipe.joblib')"
+    "from typing import Tuple, Optional \n",
+    "\n",
+    "def create_dataframe() -> pd.DataFrame:\n",
+    "    \"\"\"\n",
+    "    Create a DataFrame with sample data for a music genre classification task.\n",
+    "    \n",
+    "    Returns:\n",
+    "        pd.DataFrame: A DataFrame with music genres, social media followers, likes, and sold-out status.\n",
+    "    \"\"\"\n",
+    "    data = {\n",
+    "        'Genre': ['Rock', 'Metal', 'Bluegrass', 'Rock', np.nan, 'Rock', 'Rock', np.nan, 'Bluegrass', 'Rock'],\n",
+    "        'Social_media_followers': [1000000, 1000000, 2000000, 1310000, 1700000, np.nan, 4100000, 1600000, 2200000, 1000000],\n",
+    "        'likes': [6000000, 1000000, 5000000, 1610000, 1800000, np.nan, 4800000, 1650000, 2680000, 5000000],\n",
+    "        'Sold_out': [1, 1, 0, 1, 0, 0, 0, 1, 0, 1]\n",
+    "    }\n",
+    "    return pd.DataFrame(data)\n",
+    "\n",
+    "def preprocess_data(df: pd.DataFrame) -> Tuple[pd.DataFrame, pd.Series, ColumnTransformer]:\n",
+    "    \"\"\"\n",
+    "    Preprocess data by setting up a pipeline with imputation, scaling, and encoding steps.\n",
+    "\n",
+    "    Args:\n",
+    "        df (pd.DataFrame): The input DataFrame containing features and target variable.\n",
+    "    \n",
+    "    Returns:\n",
+    "        Tuple: Feature matrix X, target vector y, and ColumnTransformer for preprocessing.\n",
+    "    \"\"\"\n",
+    "    # Separate features and target variable\n",
+    "    X = df.drop(columns='Sold_out')\n",
+    "    y = df['Sold_out']\n",
+    "    \n",
+    "    # Identify numerical and categorical columns\n",
+    "    num_cols = df.select_dtypes(include=['float64']).columns.tolist()\n",
+    "    cat_cols = df.select_dtypes(include=['object', 'category']).columns.tolist()\n",
+    "    \n",
+    "    # Define pipelines for numerical and categorical transformations\n",
+    "    num_pipe = Pipeline([\n",
+    "        ('impute', SimpleImputer(strategy='mean')),\n",
+    "        ('scale', StandardScaler())\n",
+    "    ])\n",
+    "    cat_pipe = Pipeline([\n",
+    "        ('impute', SimpleImputer(strategy='most_frequent')),\n",
+    "        ('ohe', OneHotEncoder(handle_unknown='ignore', sparse_output=False))\n",
+    "    ])\n",
+    "    \n",
+    "    # Combine pipelines using ColumnTransformer\n",
+    "    col_trans = ColumnTransformer([\n",
+    "        ('num', num_pipe, num_cols),\n",
+    "        ('cat', cat_pipe, cat_cols)\n",
+    "    ], remainder='drop', n_jobs=-1)\n",
+    "\n",
+    "    return X, y, col_trans\n",
+    "\n",
+    "def build_pipeline(col_trans: ColumnTransformer) -> Pipeline:\n",
+    "    \"\"\"\n",
+    "    Create a machine learning pipeline with a preprocessor and a decision tree classifier.\n",
+    "    \n",
+    "    Args:\n",
+    "        col_trans (ColumnTransformer): A ColumnTransformer containing preprocessing steps.\n",
+    "    \n",
+    "    Returns:\n",
+    "        Pipeline: A machine learning pipeline with preprocessing and a classifier.\n",
+    "    \"\"\"\n",
+    "    classifier = DecisionTreeClassifier()\n",
+    "    pipeline = make_pipeline(col_trans, classifier)\n",
+    "    return pipeline\n",
+    "\n",
+    "def train_and_evaluate(pipeline: Pipeline, X: pd.DataFrame, y: pd.Series) -> float:\n",
+    "    \"\"\"\n",
+    "    Train the pipeline on training data, evaluate it on test data, and save the trained model.\n",
+    "    \n",
+    "    Args:\n",
+    "        pipeline (Pipeline): The machine learning pipeline to train and evaluate.\n",
+    "        X (pd.DataFrame): Feature matrix.\n",
+    "        y (pd.Series): Target vector.\n",
+    "    \n",
+    "    Returns:\n",
+    "        float: Accuracy score on the test set.\n",
+    "    \"\"\"\n",
+    "    try:\n",
+    "        # Split data into training and test sets\n",
+    "        X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=42)\n",
+    "        \n",
+    "        # Train the pipeline\n",
+    "        pipeline.fit(X_train, y_train)\n",
+    "        \n",
+    "        # Evaluate the model\n",
+    "        score = pipeline.score(X_test, y_test)\n",
+    "        precision = precision_score(y_test, pipeline.predict(X_test),zero_division=0)\n",
+    "        recall = recall_score(y_test, pipeline.predict(X_test),zero_division=0)\n",
+    "        \n",
+    "        print(f'Model Accuracy: {score:.2f}')\n",
+    "        print(f'Precision: {precision:.2f}')\n",
+    "        print(f'Recall: {recall:.2f}')\n",
+    "        \n",
+    "        # Save the model\n",
+    "        joblib.dump(pipeline, 'pipe.joblib')\n",
+    "        print(\"Model saved as 'pipe.joblib'\")\n",
+    "        \n",
+    "        return score\n",
+    "\n",
+    "    except NotFittedError as e:\n",
+    "        print(f\"Model not fitted yet: {e}\")\n",
+    "        return -1\n",
+    "    \n",
+    "    except ValueError as e:\n",
+    "        print(f\"ValueError during training: {e}\")\n",
+    "        return -1\n",
+    "    \n",
+    "    except Exception as e:\n",
+    "        print(f\"An unexpected error occurred during training or evaluation: {e}\")\n",
+    "        return -1\n",
+    "\n",
+    "def load_and_verify_model() -> Optional[Pipeline]:\n",
+    "    \"\"\"\n",
+    "    Load a previously saved machine learning model from a file and verify its contents.\n",
+    "\n",
+    "    Returns:\n",
+    "        Optional[Pipeline]: The loaded model (Pipeline object) if successful, \n",
+    "        or None if there was an error loading the model.\n",
+    "    \"\"\"\n",
+    "    try:\n",
+    "        # Attempt to load the model from the joblib file\n",
+    "        model = joblib.load('pipe.joblib')\n",
+    "        print(\"Loaded model successfully.\")\n",
+    "        return model\n",
+    "    \n",
+    "    except FileNotFoundError as e:\n",
+    "        # Handle case where the file does not exist\n",
+    "        print(f\"Model file not found: {e}\")\n",
+    "        return None\n",
+    "    \n",
+    "    except joblib.exceptions.InvalidFileException as e:\n",
+    "        # Handle case where the file is not a valid joblib file\n",
+    "        print(f\"Invalid model file: {e}\")\n",
+    "        return None\n",
+    "\n",
+    "    except Exception as e:\n",
+    "        # Catch any other unforeseen errors and print the error message\n",
+    "        print(f\"An unexpected error occurred while loading the model: {e}\")\n",
+    "        return None\n",
+    "    \n",
+    "def main() -> None:\n",
+    "    \"\"\"\n",
+    "    Main function to execute the ML pipeline for preprocessing, training, evaluation, and saving the model.\n",
+    "    \"\"\"\n",
+    "    try:\n",
+    "        # Step 1: Load data\n",
+    "        df = create_dataframe()\n",
+    "        \n",
+    "        # Step 2: Preprocess data\n",
+    "        X, y, col_trans = preprocess_data(df)\n",
+    "        \n",
+    "        # Step 3: Build pipeline\n",
+    "        pipeline = build_pipeline(col_trans)\n",
+    "        \n",
+    "        # Step 4: Train and evaluate model\n",
+    "        score = train_and_evaluate(pipeline, X, y)\n",
+    "        \n",
+    "        # Step 5: Load and verify saved model\n",
+    "        loaded_pipeline = load_and_verify_model()\n",
+    "        if loaded_pipeline:\n",
+    "            print(\"Loaded pipeline verification score:\", loaded_pipeline.score(X, y))\n",
+    "\n",
+    "    except Exception as e:\n",
+    "        print(f\"An error occurred in the main function: {e}\")\n",
+    "\n",
+    "# Execute the main function\n",
+    "if __name__ == \"__main__\":\n",
+    "    main()\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e49e1d85-0ab8-4c2a-8615-fd9b134ea093",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
