Added inference code

--- a/Notebooks/4_sklearn_pipeline/sklearn_pipeline.ipynb
+++ b/Notebooks/4_sklearn_pipeline/sklearn_pipeline.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "e49e1d85-0ab8-4c2a-8615-fd9b134ea093",
    "metadata": {},
    "outputs": [
@@ -24,7 +24,8 @@
       "Recall: 1.00\n",
       "Model saved as 'pipe.joblib'\n",
       "Loaded model successfully.\n",
-      "Loaded pipeline verification score: 1.0\n"
+      "Loaded pipeline verification score: 1.0\n",
+      "Predictions: [1 0 0]\n"
      ]
     }
    ],
@@ -191,7 +192,36 @@
     "        # Catch any other unforeseen errors and print the error message\n",
     "        print(f\"An unexpected error occurred while loading the model: {e}\")\n",
     "        return None\n",
+    "\n",
+    "def make_inference(model: Pipeline, new_data: pd.DataFrame) -> np.ndarray:\n",
+    "    \"\"\"\n",
+    "    Make predictions on new data using the trained model pipeline.\n",
     "    \n",
+    "    Args:\n",
+    "        model (Pipeline): The trained model pipeline.\n",
+    "        new_data (pd.DataFrame): A DataFrame containing new data for inference.\n",
+    "        \n",
+    "    Returns:\n",
+    "        np.ndarray: Predictions for the new data.\n",
+    "    \"\"\"\n",
+    "    try:\n",
+    "        # Predict using the loaded model\n",
+    "        predictions = model.predict(new_data)\n",
+    "        print(\"Predictions:\", predictions)\n",
+    "        return predictions\n",
+    "    \n",
+    "    except NotFittedError as e:\n",
+    "        print(f\"Model is not fitted: {e}\")\n",
+    "        return np.array([])\n",
+    "    \n",
+    "    except ValueError as e:\n",
+    "        print(f\"ValueError during inference: {e}\")\n",
+    "        return np.array([])\n",
+    "    \n",
+    "    except Exception as e:\n",
+    "        print(f\"An unexpected error occurred during inference: {e}\")\n",
+    "        return np.array([])\n",
+    "\n",
     "def main() -> None:\n",
     "    \"\"\"\n",
     "    Main function to execute the ML pipeline for preprocessing, training, evaluation, and saving the model.\n",
@@ -211,8 +241,17 @@
     "        \n",
     "        # Step 5: Load and verify saved model\n",
     "        loaded_pipeline = load_and_verify_model()\n",
+    "        \n",
+    "        # Step 6: Make inference on new data if the model loaded successfully\n",
     "        if loaded_pipeline:\n",
+    "            # Example new data for inference\n",
+    "            new_data = pd.DataFrame({\n",
+    "                'Genre': ['Rock', 'Bluegrass', np.nan],\n",
+    "                'Social_media_followers': [1500000, np.nan, 2300000],\n",
+    "                'likes': [1800000, 2100000, np.nan]\n",
+    "            })\n",
     "            print(\"Loaded pipeline verification score:\", loaded_pipeline.score(X, y))\n",
+    "            make_inference(loaded_pipeline, new_data)\n",
     "\n",
     "    except Exception as e:\n",
     "        print(f\"An error occurred in the main function: {e}\")\n",
