Added flow diagram and conclusions

--- a/Notebooks/8_private_business_users/private_business_users.ipynb
+++ b/Notebooks/8_private_business_users/private_business_users.ipynb
@@ -8,12 +8,19 @@
     "\n",
     "Predict which private users are parking for business purposes based on their parking behavior. \n",
     "\n",
-    "Approach: After some basic EDA, we have both corporate and private users. Using corporate data, I tried to find patterns in it that specifies their parking behavior e.g. finding specific zones via location in which they park and corporate hours. Based on that, I created is_business_like label and converted it into a classification problem. Also used KMeans clustering to find business zones."
+    "### Approach: \n",
+    "After some basic EDA, we have both corporate and private users. Using corporate data, I tried to find patterns in it that specifies their parking behavior e.g. finding specific zones via location in which they park and corporate hours. Based on that, I created is_business_like label and converted it into a classification problem. Also used KMeans clustering to find business zones.\n",
+    "\n",
+    "### Workflow\n",
+    "\n",
+    "<div style=\"text-align: center;\">\n",
+    "    <img src=\"parking.png\" alt=\"Overall Flow\" width=\"500\">\n",
+    "</div>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -463,6 +470,28 @@
     "\n",
     "if __name__ == \"__main__\":\n",
     "    main()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Conclusions:\n",
+    "- There are around 87000 rows with 57000 private and around 30000 corporate rows. \n",
+    "- The data is from 2013 to 2020. \n",
+    "- The data had some faulty latitude longitudes.\n",
+    "- Out of 57000 private rows, around 10,000 may be potential business users predicted with around 80% accuracy. \n",
+    "\n",
+    "## Future Work:\n",
+    "- More data sources would make it easy to find out business users. e.g. \n",
+    "    - User Demographics: Information like age, gender, and \n",
+    "    occupation can help classify whether the user is likely a business professional.\n",
+    "    - Nearby Business Establishments: Use POI (Point of Interest) data to identify \n",
+    "    businesses, restaurants, or corporate offices near parking lots.\n",
+    "    - Corporate Zones or Districts: Government or municipal zoning data \n",
+    "    that classifies areas as business, industrial, or residential.\n",
+    "    - Public Holidays and Weekends: Business-like behavior might drop\n",
+    "    during weekends or public holidays, while private usage may increase"
    ]
   }
  ],
